# ZeroizePy-lib

./: CHANGELOG.md  Dockerfile  LICENSE.txt  README.md  pyproject.toml  release.bat  setup.cfg  zp.py
.github/workflows/: ci.yml  python-publish.yml  tests.yml  update-changelog.yml
src/securewipe/: __init__.py  file.py  memory.py  session.py
src/securewipe.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/zeroizepy/: __init__.py  _sodium.py  crypto.py  memory.py  os_erase.py  session.py  utils.py
tests/: test_crypto.py  test_file.py  test_memory.py  test_session.py
