[metadata]
name = zeroizepy
version = 1.2.0
author = Ordu Stephen Chinedu
author_email = fordstphn@gmail.com
description = A Python library for secure file deletion, in-memory secret handling and cryptographic erasure
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/xavenordu/Xavpy-library
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    License :: OSI Approved :: MIT License
    Topic :: Security :: Cryptography
    Topic :: System :: Archiving

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.8
install_requires =
    psutil>=5.9.0
    cryptography>=41.0.0

[options.extras_require]
crypto =
    pynacl>=1.5.0
dev =
    pytest>=7.4.0
    hypothesis>=6.0.0
    cryptography>=41.0.0
